--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -68,7 +68,7 @@ branches:
   - name: main
     protection:
       required_pull_request_reviews:
-        required_approving_review_count: 1
+        required_approving_review_count: 2
         dismiss_stale_reviews: true
         require_code_owner_reviews: true
         dismissal_restrictions:
@@ -88,7 +88,7 @@ branches:
   - name: feature/*
     protection:
       required_pull_request_reviews:
-        required_approving_review_count: 1
+        required_approving_review_count: 2
         dismiss_stale_reviews: true
         require_code_owner_reviews: true
         dismissal_restrictions:
@@ -99,6 +99,27 @@ branches:
         contexts: []
       enforce_admins: true
       required_linear_history: true
+      required_conversation_resolution: true
+      restrictions:
+        apps: []
+        users: []
+        teams: [malty-contributors]
+
+  - name: hotfix/*
+    protection:
+      required_pull_request_reviews:
+        required_approving_review_count: 2
+        dismiss_stale_reviews: true
+        require_code_owner_reviews: true
+        dismissal_restrictions:
+          users: []
+          teams: []
+      required_status_checks:
+        strict: true
+        contexts: []
+      enforce_admins: true
+      required_linear_history: true
+      required_conversation_resolution: true
       restrictions:
         apps: []
         users: []
@@ -118,6 +139,7 @@ branches:
         contexts: []
       enforce_admins: true
       required_linear_history: true
+      required_conversation_resolution: true
       restrictions:
         apps: []
         users: []
