--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,13 +35,21 @@ jobs:
         env:
           BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
 
-      - name: Run Unit Tests
+      - name: Intall Bit
         run: |
           npx @teambit/bvm install
           export PATH=$HOME/bin:$PATH
-          echo 'export PATH=$HOME/bin:$PATH' >> ~/.bashrc && source ~/.bashrc
+          echo 'export PATH=$HOME/bin:$PATH' >> $GITHUB_ENV
+        shell: bash
+
+      - name: Install dependencies (Bit CLI)
+        run: |
           bit config set user.token ${{ secrets.BIT_TOKEN }}
           bit install
           bit compile
+        shell: bash
+
+      - name: Run Unit Tests
+        run: |
           yarn test:ci
         shell: bash
