--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,5 +78,5 @@ jobs:
 
       - name: Run Unit Tests
         run: |
-          yarn test:ci
+          yarn test:ci --coverage
         shell: bash
