--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "compile": "tsc -b",
     "start": "bit compile && yarn storybook",
     "serve": "bit install && bit compile && bit start",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook --docs -o docs",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build --docs -o docs",
     "build": "bit build",
     "test": "jest",
     "test:ci": "jest --silent --ci",
@@ -40,81 +40,79 @@
     "check-format": "prettier --check ."
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.6",
-    "@tanstack/react-table": "^8.7.6",
+    "@popperjs/core": "^2.11.8",
+    "@tanstack/react-table": "^8.9.3",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.1",
-    "react-datepicker": "^4.8.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^17.0.2",
     "react-popper": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@carlsberg/eslint-config-carlsberg": "^0.3.0",
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@carlsberg/eslint-config-carlsberg": "^0.4.1",
     "@carlsberg/prettier-config": "^0.0.1",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-docs": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/addons": "^6.5.15",
-    "@storybook/builder-webpack5": "^6.5.15",
-    "@storybook/manager-webpack5": "^6.5.15",
-    "@storybook/react": "^6.5.15",
-    "@storybook/theming": "^6.5.15",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@storybook/addon-actions": "^7.3.2",
+    "@storybook/addon-docs": "^7.3.2",
+    "@storybook/addon-essentials": "^7.3.2",
+    "@storybook/addon-links": "^7.3.2",
+    "@storybook/addons": "^7.3.2",
+    "@storybook/react": "^7.3.2",
+    "@storybook/react-webpack5": "^7.3.2",
+    "@storybook/theming": "^7.3.2",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
-    "@types/babel__core": "^7.1.20",
-    "@types/jest": "^29.4.0",
-    "@types/react": "^18.0.28",
-    "@types/react-beautiful-dnd": "^13.1.3",
-    "@types/react-datepicker": "^4.8.0",
-    "@types/react-dom": "^17.0.18",
-    "@types/react-table": "^7.7.14",
+    "@types/babel__core": "^7.20.1",
+    "@types/jest": "^29.5.4",
+    "@types/react": "^18.2.21",
+    "@types/react-beautiful-dnd": "^13.1.4",
+    "@types/react-datepicker": "^4.15.0",
+    "@types/react-dom": "^17.0.20",
+    "@types/react-table": "^7.7.15",
     "@types/react-test-renderer": "^17.0.2",
     "@types/styled-components": "^5.1.26",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.53.0",
-    "babel-jest": "^29.4.1",
-    "babel-loader": "^9.1.2",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "babel-jest": "^29.6.3",
+    "babel-loader": "^9.1.3",
     "babel-plugin-transform-hoist-jsx-style": "^1.0.0",
-    "eslint": "^8.35.0",
+    "eslint": "^8.47.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-functional": "*",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-functional": "5.0.8",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-jsdoc": "*",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.10.2",
-    "eslint-webpack-plugin": "^3.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "prettier": "^2.8.4",
-    "prettier-plugin-organize-imports": "^3.2.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-test-renderer": "^17.0.2",
-    "styled-components": "^5.3.6",
+    "eslint-plugin-testing-library": "^5.11.1",
+    "eslint-webpack-plugin": "^4.0.1",
+    "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.6.3",
+    "jest-environment-jsdom": "^29.6.3",
+    "prettier": "^3.0.2",
+    "prettier-plugin-organize-imports": "^3.2.3",
+    "react-test-renderer": "^18.2.0",
+    "storybook": "^7.3.2",
+    "styled-components": "^6.0.7",
     "styled-normalize": "^8.0.7",
-    "ts-jest": "^29.0.5",
-    "ts-loader": "^9.4.2",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
-    "typescript": "~4.9.5",
+    "typescript": "~5.1.6",
     "url-loader": "^4.1.1",
     "uuid": "^9.0.0",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "workspaces": [
     "malty/*"
