--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -57,7 +57,8 @@
       "react": "<18.0.0",
       "react-dom": "<18.0.0",
       "@types/react": "^17.0.2",
-      "@types/react-dom": "^17.0.2"
+      "@types/react-dom": "^17.0.2",
+      "semver": "^7.5.2"
     },
     "packageManagerArgs": [],
     "devFilePatterns": ["**/*.spec.ts"],
