--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
   "rules": {
     "import/no-extraneous-dependencies": "off",
     "@typescript-eslint/no-unused-vars-experimental": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "@typescript-eslint/no-duplicate-enum-values": "off"
   },
   "overrides": [
     {
