--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   ],
   "description": "Malty, probably the best Design System in the world",
   "engines": {
-    "node": ">=12 <=16",
-    "npm": ">=6 <=8"
+    "node": "16.x",
+    "npm": "8.x"
   },
   "repository": {
     "type": "git",
@@ -27,14 +27,14 @@
     "compile": "tsc -b",
     "start": "bit compile && yarn storybook",
     "serve": "bit install && bit compile && bit start",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook --docs -o docs",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build -o docs",
     "build": "bit build",
     "test": "jest",
     "test:ci": "jest --silent --ci",
     "test:watch": "jest --watch",
     "format": "prettier --write . --loglevel error",
-    "check-lint": "eslint \"malty/**/*.{js,ts,tsx}\" --max-warnings=14",
+    "check-lint": "eslint \"malty/**/*.{js,ts,tsx}\" --max-warnings=9",
     "lint": "yarn check-lint --fix",
     "check-types": "tsc --noemit",
     "check-format": "prettier --check ."
@@ -55,15 +55,14 @@
     "@babel/preset-typescript": "^7.18.6",
     "@carlsberg/eslint-config-carlsberg": "^0.3.0",
     "@carlsberg/prettier-config": "^0.0.1",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-docs": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/addons": "^6.5.15",
-    "@storybook/builder-webpack5": "^6.5.15",
-    "@storybook/manager-webpack5": "^6.5.15",
-    "@storybook/react": "^6.5.15",
-    "@storybook/theming": "^6.5.15",
+    "@storybook/addon-actions": "^7.4.1",
+    "@storybook/addon-docs": "^7.4.1",
+    "@storybook/addon-essentials": "^7.4.1",
+    "@storybook/addon-links": "^7.4.1",
+    "@storybook/addons": "^7.4.1",
+    "@storybook/react": "^7.4.1",
+    "@storybook/react-webpack5": "^7.4.1",
+    "@storybook/theming": "^7.4.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
@@ -104,6 +103,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
+    "storybook": "^7.4.1",
     "styled-components": "^5.3.6",
     "styled-normalize": "^8.0.7",
     "ts-jest": "^29.0.5",
