--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -85,4 +85,4 @@ jobs:
       - name: Upload coverage report
         uses: codecov/codecov-action@v4-beta
         env:
-          CODECOV_TOKEN: ${{ secrets.codecov-token }}
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
